fix: Application search does not work if search term pattern matches _id pattern
https://gravitee.atlassian.net/browse/APIM-9334
(cherry picked from commit 26fe89c910b9d0956b269e083687af9d3aed3068)